--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -16,7 +16,7 @@
             <a class="nav-link" routerLink="about" routerLinkActive="active-link">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#footer" routerLinkActive="active-link">Contact</a>
+            <a class="nav-link" (click)= "footer()" routerLinkActive="active-link">Contact</a>
           </li>
         </ul>
       </div>
