--- a/src/app/pages/projectpage/projectpage.component.css
+++ b/src/app/pages/projectpage/projectpage.component.css
@@ -15,3 +15,11 @@
     object-fit: cover;
     border-radius: 5px;
 }
+
+.fancybox{
+    transition: .5s ease-in-out;
+}
+
+.fancybox:hover{
+    filter: brightness(60%);
+}
