--- a/src/app/pages/projectpage/projectpage.component.html
+++ b/src/app/pages/projectpage/projectpage.component.html
@@ -3,7 +3,9 @@
     <div class="row">
         <h1 class="mt-3 mb-4">{{galleryData[0].imgName}}</h1>
         <div class="col-lg-4 projList" *ngFor= "let pd of projectData; index as i">
-            <img src="{{pd.img}}" width="100%"/>
+        <a href="{{pd.img}}" class="fancybox" data-fancybox="gallery"> 
+            <img src="{{pd.img}}" width="100%"/>    
+        </a>
             <p>{{pd.imgName}}</p>
         </div>
     </div>
