fixed broken image issue in home component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div class="container mt-5 mb-5">
+<div class="container mt-5">
   <div class="animated-text">
     <h1 class="text-center"><span class="auto-type"></span></h1>
   </div>
@@ -17,10 +17,11 @@
   <!-- Swiper Widget  -->
 
   <section>
+    <a routerLink="/projects">
     <swiper-container
       class="mySwiper"
       loop="true"
-      pagination="true"
+      pagination="false"
       effect="coverflow"
       grab-cursor="false"
       centered-slides="true"
@@ -41,28 +42,29 @@
         </div>
       </swiper-slide>
     </swiper-container>
+  </a>
   </section>
 
-  <div class="row mt-5">
+  <div class="box row">
     <h1 class="text-center">What Do WE Offer</h1>
     <!-- One -->
     <div class="col-lg-4 mt-5">
-      <div class="stepBox">
-        <img src="../../../assets/img/creativity.png">
+      <div class="shadowBox">
+        <img src="assets/img/creativity.png">
         <p>Creativity</p>
       </div>
     </div>
     <!-- Two -->
     <div class="col-lg-4 mt-5">
-      <div class="stepBox">
-        <img src="../../../assets/img/challenge.png">
+      <div class="shadowBox">
+        <img src="assets/img/challenge.png">
         <p>Challenging Projects</p>
       </div>
     </div>
     <!-- Three -->
     <div class="col-lg-4 mt-5">
-      <div class="stepBox">
-        <img src="../../../assets/img/services.png">
+      <div class="shadowBox">
+        <img src="assets/img/services.png">
         <p>End to end Services</p>
       </div>
     </div>
