--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -26,14 +26,14 @@
     </div>
 
     <div class="row">
-        <div class="card col-lg-4 mt-3">
+        <div [formGroup]="form" class="card col-lg-4 mt-3">
             <h1 class="text-center mt-3">Get In Touch </h1>
 
-            <form>
-                <input type="text" class="form-control mt-3" placeholder="Enter Your Full Name">
-                <input type="text" class="form-control mt-3" placeholder="Enter Your Mobile No.">
-                <textarea class="form-control mt-3" placeholder="Enter Your Address"></textarea>
-                <button class="btn text-center btn-md btn-dark mt-3 mb-3">Send Message </button>
+            <form action="javascript:void(0)" (submit)="send()">
+                <input formControlName="from_name" type="text" class="form-control mt-3" placeholder="Enter Your Full Name">
+                <input formControlName="mobile_no" type="text" class="form-control mt-3" placeholder="Enter Your Mobile No.">
+                <textarea formControlName="address" class="form-control mt-3" placeholder="Enter Your Address"></textarea>
+                <button type="submit" class="btn text-center btn-md btn-dark mt-3 mb-3">Send Message </button>
             </form>
         </div>
         <div class="text-center address col-lg-6 mt-5">
