--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
     <!-- Nav- bar -->
-    <app-navbar></app-navbar>
+    <app-navbar *ngIf="showNavbar"></app-navbar>
 
     <router-outlet></router-outlet>
 
