--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -1,19 +1,11 @@
 <div id="footer" class="container-fluid footer mt-5">
 
-    <div class="row">
+    <div class="row row-one">
 
         <!-- name  -->
         <div class="col-lg-6">
             <h1> KGN  Interiors </h1>
             <p>All Your Interior Solution</p>
-        </div>
-
-        <!-- nav -->
-        <div class="col-lg-4">
-            <!-- <a routerLink="">Home</a>
-            <a routerLink="menu">Menu</a>
-            <a routerLink="about">About</a>
-            <a routerLink="contact">Contact</a> -->
         </div>
 
         <!-- Social media -->
@@ -25,7 +17,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row contact-card">
         <div [formGroup]="form" class="card col-lg-4 mt-3">
             <h1 class="text-center mt-3">Get In Touch </h1>
 
