--- a/src/app/sharepage/navbar/navbar.component.css
+++ b/src/app/sharepage/navbar/navbar.component.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
 }
+
 .navbar-brand.active-link{
     color: #fff;
     font-weight: bold;
@@ -36,5 +37,14 @@
     color: #000;
 }
 
+/* CSS FOR MOBILE PHONES  NAV */
+@media screen and (max-width: 1200px) {
+    .navbar-brand.active-link{
+        font-size: 25px;
+    }
 
+    .navbar-nav .nav-link{
+        color: #fff;
+    }
+}
 
