--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="" routerLinkActive="active-link">KGN  Interiors</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" (click)= "isCollapsed = !isCollapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+      <div class="collapse navbar-collapse" id="navbarNav" [ngbCollapse]= "isCollapsed">
+        <ul class="navbar-nav ms-auto" (click)= "isCollapsed = !isCollapsed">
           <li class="nav-item">
             <a class="nav-link" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]= "{exact:true}">Home</a>
           </li>
