changes in about content

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -10,7 +10,7 @@
     <div class="row text-center mt-5">
         <img src="assets/img/zahidSayyed.jpg">
         <h5 class="mt-3">Zahid Sayyed</h5>
-        <p>CEO and Founder</p>
+        <p>Proprietor</p>
         <h2 class="mt-3">Our Vision</h2>
         <p>At KGN Interiors, we envision a world where every space is a masterpiece of design, a reflection of individuality, and a sanctuary of comfort. 
             We aspire to inspire creativity and elevate living through innovative, functional, and aesthetically captivating interiors.</p>
